--- a/tableHTML_Vienna_R.Rmd
+++ b/tableHTML_Vienna_R.Rmd
@@ -248,16 +248,170 @@ mtcars %>%
 
 Currently the package offers the following add_css functions which add CSS to their respective part of the HTML table:
 
+<div> </div> 
+<div style="float: left; width: 50%;"> 
 - add_css_caption
 - add_css_column
 - add_css_conditional_column
 - add_css_footer
 - add_css_header
+</div> <div style="float: left; width: 50%;">
 - add_css_row
 - add_css_second_header
 - add_css_table
 - add_css_tbody
 - add_css_thead
+</div> 
+
+## Example of how some of the add_css_* <br> functions can be used
+
+```{r second_header_code, eval = FALSE}
+mtcars[1:15, ] %>%
+  tableHTML(widths = c(140, rep(45, 11)),
+            second_headers = list(c(3, 4, 5), 
+                                  c('team1', 'team2', 'team3')),
+            caption = 'Table of Cars',
+            footer = 'Figure 1. Stats for famous cars') %>% 
+  add_css_second_header(css = list(c('height', 'background-color', 'font-size'), 
+                                   c('40px', ' #e6e6e6', '30px')),
+                        second_headers = 1:3)
+```
+
+## Example of how some of the add_css_* <br> functions can be used
+
+```{r second_header_table, echo = FALSE}
+mtcars[1:5, ] %>%
+  tableHTML(widths = c(140, rep(45, 11)),
+            second_headers = list(c(3, 4, 5), 
+                                  c('team1', 'team2', 'team3')),
+            caption = 'Table of Cars',
+            footer = 'Figure 1. Stats for famous cars') %>% 
+  add_css_second_header(css = list(c('height', 'background-color', 'font-size'), 
+                                   c('40px', ' #e6e6e6', '30px')),
+                        second_headers = 1:3)
+```
+
+## Example of how some of the add_css_* <br> functions can be used
+
+```{r header_code, eval = FALSE}
+mtcars[1:15, ] %>%
+  tableHTML(widths = c(140, rep(45, 11)),
+            second_headers = list(c(3, 4, 5), 
+                                  c('team1', 'team2', 'team3')),
+            caption = 'Table of Cars',
+            footer = 'Figure 1. Stats for famous cars') %>% 
+  add_css_second_header(css = list(c('height', 'background-color', 'font-size'), 
+                                   c('40px', ' #e6e6e6', '30px')),
+                        second_headers = 1:3) %>%
+  add_css_header(css = list(c('height', 'background-color'), 
+                            c('30px', ' #e6e6e6')),
+                 headers = 1:12)
+```
+
+## Example of how some of the add_css_* <br> functions can be used
+
+```{r header_table, echo = FALSE}
+mtcars[1:5, ] %>%
+  tableHTML(widths = c(140, rep(45, 11)),
+            second_headers = list(c(3, 4, 5), 
+                                  c('team1', 'team2', 'team3')),
+            caption = 'Table of Cars',
+            footer = 'Figure 1. Stats for famous cars') %>% 
+  add_css_second_header(css = list(c('height', 'background-color', 'font-size'), 
+                                   c('40px', ' #e6e6e6', '30px')),
+                        second_headers = 1:3) %>%
+  add_css_header(css = list(c('height', 'background-color'), 
+                            c('30px', ' #e6e6e6')),
+                 headers = 1:12)
+```
+
+## Example of how some of the add_css_* <br> functions can be used
+
+```{r css_row_code, eval = FALSE}
+mtcars[1:15, ] %>%
+  tableHTML(widths = c(140, rep(45, 11)),
+            second_headers = list(c(3, 4, 5), 
+                                  c('team1', 'team2', 'team3')),
+            caption = 'Table of Cars',
+            footer = 'Figure 1. Stats for famous cars') %>% 
+  add_css_second_header(css = list(c('height', 'background-color', 'font-size'), 
+                                   c('40px', ' #e6e6e6', '30px')),
+                        second_headers = 1:3) %>%
+  add_css_header(css = list(c('height', 'background-color'), 
+                            c('30px', ' #e6e6e6')),
+                 headers = 1:12) %>%
+  add_css_row(css = list('background-color', '#f2f2f2'),
+              rows = even(1:17)) %>%
+  add_css_row(css = list('background-color', '#e6f0ff'),
+              rows = odd(1:17))
+```
+
+## Example of how some of the add_css_* <br> functions can be used
+
+```{r css_row_table, echo = FALSE}
+mtcars[1:5, ] %>%
+  tableHTML(widths = c(140, rep(45, 11)),
+            second_headers = list(c(3, 4, 5), 
+                                  c('team1', 'team2', 'team3')),
+            caption = 'Table of Cars',
+            footer = 'Figure 1. Stats for famous cars') %>% 
+  add_css_second_header(css = list(c('height', 'background-color', 'font-size'), 
+                                   c('40px', ' #e6e6e6', '30px')),
+                        second_headers = 1:3) %>%
+  add_css_header(css = list(c('height', 'background-color'), 
+                            c('30px', ' #e6e6e6')),
+                 headers = 1:12) %>%
+  add_css_row(css = list('background-color', '#f2f2f2'),
+              rows = even(1:7)) %>%
+  add_css_row(css = list('background-color', '#e6f0ff'),
+              rows = odd(1:17))
+```
+
+## Example of how some of the add_css_* <br> functions can be used
+
+```{r css_column_code, eval = FALSE}
+mtcars[1:15, ] %>%
+  tableHTML(widths = c(140, rep(45, 11)),
+            second_headers = list(c(3, 4, 5), 
+                                  c('team1', 'team2', 'team3')),
+            caption = 'Table of Cars',
+            footer = 'Figure 1. Stats for famous cars') %>% 
+  add_css_second_header(css = list(c('height', 'background-color', 'font-size'), 
+                                   c('40px', ' #e6e6e6', '30px')),
+                        second_headers = 1:3) %>%
+  add_css_header(css = list(c('height', 'background-color'), 
+                            c('30px', ' #e6e6e6')),
+                 headers = 1:12) %>%
+  add_css_row(css = list('background-color', '#f2f2f2'),
+              rows = even(1:17)) %>%
+  add_css_row(css = list('background-color', '#e6f0ff'),
+              rows = odd(1:17)) %>%
+  add_css_column(css = list('text-align', 'center'), 
+                 columns = names(mtcars)) 
+```
+
+## Example of how some of the add_css_* <br> functions can be used
+
+```{r css_column_table, echo = FALSE}
+mtcars[1:5, ] %>%
+  tableHTML(widths = c(140, rep(45, 11)),
+            second_headers = list(c(3, 4, 5), 
+                                  c('team1', 'team2', 'team3')),
+            caption = 'Table of Cars',
+            footer = 'Figure 1. Stats for famous cars') %>% 
+  add_css_second_header(css = list(c('height', 'background-color', 'font-size'), 
+                                   c('40px', ' #e6e6e6', '30px')),
+                        second_headers = 1:3) %>%
+  add_css_header(css = list(c('height', 'background-color'), 
+                            c('30px', ' #e6e6e6')),
+                 headers = 1:12) %>%
+  add_css_row(css = list('background-color', '#f2f2f2'),
+              rows = even(1:7)) %>%
+  add_css_row(css = list('background-color', '#e6f0ff'),
+              rows = odd(1:7)) %>%
+  add_css_column(css = list('text-align', 'center'), 
+                 columns = names(mtcars))
+```
 
 ## Example of how some of the add_css_* <br> functions can be used
 
@@ -453,11 +607,22 @@ knitr::include_graphics('img/conf_matrix.png')
 - Use d3 to create HTML tables?
 - Export images from `tableHTML`
 
+## Credits
+
+<br>
+<br>
+<br>
+<br>
+
+### Special thanks to Dana Jomar for designing this awesome logo!
+
 ## Last Slide
 
 <h3>Questions?</h3>
 
-<br>
+
+
+
 <br>
 If you need help using the package, there is a `tableHTML` tag on stackoverflow:
 
